--- a/advent-of-code-y2022.cabal
+++ b/advent-of-code-y2022.cabal
@@ -19,6 +19,7 @@ executable advent-of-code-y2022
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                       , text
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
