--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  compiler: ghc-9.2.4
+resolver: nightly-2022-11-12
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,8 +39,7 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps:
-- split-0.2.3.5
+# extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
