--- a/advent-of-code-y2022.cabal
+++ b/advent-of-code-y2022.cabal
@@ -22,6 +22,7 @@ executable advent-of-code-y2022
                         ,text
                         ,split
                         ,lens
+                        ,utility-ht
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
