--- a/advent-of-code-y2022.cabal
+++ b/advent-of-code-y2022.cabal
@@ -24,6 +24,7 @@ executable advent-of-code-y2022
                         ,lens
                         ,utility-ht
                         ,parsec
+                        ,composition
   ghc-options:         -Wall
                        -Wextra
                        -Wcompat
