--- a/advent-of-code-y2022.cabal
+++ b/advent-of-code-y2022.cabal
@@ -29,6 +29,7 @@ executable advent-of-code-y2022
                         ,hashable
                         ,product-profunctors
                         ,parallel
+                        ,containers
   ghc-options:         -Wall
                        -Wextra
                        -Wcompat
